// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorsViews ErrorsStatusbar displays error 1`] = `
<div>
  <div
    class="sc-bdVaJa kwzqrW"
  >
    <span
      class="sc-iujRgT eAPoje"
      title="Test.Error: Test error description"
    >
      <i
        class="sc-TFwJa bUEOAT fa fa-exclamation-triangle"
      />
       
      Test.Error: Test error description
    </span>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsStatusbar displays nothing if no error 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays nothing if no errors 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays procedure link if unknown procedure 1`] = `
<div>
  <div
    class="sc-gwVKww TlmwU"
  >
    <div
      class="sc-hXRMBi gdoiP"
    >
      <div
        class="sc-epnACN eNRulG"
      >
        <div
          class="sc-cMhqgX sc-esOvli knGZCX"
        >
          ERROR
        </div>
        <h4
          class="sc-hORach ejJXHh"
        >
          Neo.ClientError.Procedure.ProcedureNotFound
        </h4>
      </div>
      <div
        class="sc-iQNlJl jxLqkS"
      >
        <pre
          class="sc-bAeIUo kytPrg"
        >
          not found
        </pre>
      </div>
      <div
        class="sc-hZSUBg lkKwYb"
      >
        <a
          class="sc-bsbRJL gGyDKS"
        >
          <i
            class="sc-hGoxap dspAmO fa fa-play-circle-o"
          />
           List available procedures
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsView does displays an error 1`] = `
<div>
  <div
    class="sc-gwVKww TlmwU"
  >
    <div
      class="sc-hXRMBi gdoiP"
    >
      <div
        class="sc-epnACN eNRulG"
      >
        <div
          class="sc-cMhqgX sc-esOvli knGZCX"
        >
          ERROR
        </div>
        <h4
          class="sc-hORach ejJXHh"
        >
          Test.Error
        </h4>
      </div>
      <div
        class="sc-iQNlJl jxLqkS"
      >
        <pre
          class="sc-bAeIUo kytPrg"
        >
          Test error description
        </pre>
      </div>
    </div>
  </div>
</div>
`;
